# llm_test

./: .gitignore  Makefile  README.md  dpo_dataset_generation.py  prac.py  pyproject.toml  requirements.txt  test.py
dpo_test/: dpo_dataset.ipynb  dpo_dataset_generation.py  dpo_training(Llama).ipynb  dpo_training(gemma).ipynb  dpo_training_gemma.py  dpo_training_llama.py
dpo_test/chatgpt_openai/: __init__.py  dpo_dataset.py  gpt.py
example/: quantization.ipynb
lora_test/: train.py
lora_test/data/: dataset.py
sft_test/: sft_training.py
sft_test/data/: dataset.py
sft_test/utils/: logger.py
tokenizer_test/: bpe.model  bpe.vocab  bpe_tokenizer.py  sample.txt  sentencepiece_test.py
