[project]
name = "llm-test"
version = "0.1.0"
description = ""
authors = [
    {name = "genii01",email = "genii0627@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.48.3,<5.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "peft (>=0.14.0,<0.15.0)",
    "openai (>=1.62.0,<2.0.0)",
    "tiktoken (>=0.8.0,<0.9.0)",
    "huggingface-hub (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
